change  some to crawl zhihu question

--- a/pyspider/logging.conf
+++ b/pyspider/logging.conf
@@ -6,19 +6,19 @@ level=INFO
 handlers=screen
 
 [logger_scheduler]
-level=INFO
+level=WARN
 handlers=screen
 qualname=scheduler
 propagate=0
 
 [logger_fetcher]
-level=DEBUG
+level=WARN
 handlers=screen
 qualname=fetcher
 propagate=0
 
 [logger_processor]
-level=DEBUG
+level=WARN
 handlers=screen
 qualname=processor
 propagate=0
